fix: Removed rounded borders on iOS.

--- a/style/todo.css
+++ b/style/todo.css
@@ -147,6 +147,7 @@ input[type="text"] {
   border-bottom: 2px solid #bdbdbd;
   margin-bottom: 16px;
   transition: .35s ease-in-out;
+  border-radius: 0;
 }
 
 input[type="text"]:focus {
